// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules snapshot (A) evaluated cjs 1`] = `
Object {
  "SQR_SQRT2": 2.0000000000000004,
  "SQR_SQRT_HALF": 0.5000000000000001,
}
`;

exports[`modules snapshot (A) evaluated umd 1`] = `
Object {
  "SQR_SQRT2": 2.0000000000000004,
  "SQR_SQRT_HALF": 0.5000000000000001,
}
`;

exports[`modules snapshot (B) built cjs 1`] = `
"/** @preserve
  * package: modules-fixture v0.0.0
  * file: dist/modules-fixture.cjs.js
  * homepage: HOMEPAGE
  * license: LICENSE
  **/

'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

function _interopDefault (ex) { return (ex && (typeof ex === 'object') && 'default' in ex) ? ex['default'] : ex; }

var SQRT2 = _interopDefault(require('const-sqrt-two'));

// sqrt(1/2)

var SQRT_HALF = 7.07106781186547524400844362104849039284835937688474036588339868995366239231053519425193767163820786367506923115e-01;

// EXPORTS //

var lib = SQRT_HALF;

var square = (function (number) {
  return number * number;
});

var SQR_SQRT_HALF = square(lib);
var SQR_SQRT2 = square(SQRT2);

exports.SQR_SQRT_HALF = SQR_SQRT_HALF;
exports.SQR_SQRT2 = SQR_SQRT2;
"
`;

exports[`modules snapshot (B) built es 1`] = `
"/** @preserve
  * package: modules-fixture v0.0.0
  * file: dist/modules-fixture.es.js
  * homepage: HOMEPAGE
  * license: LICENSE
  **/

import SQRT2 from 'const-sqrt-two';

// sqrt(1/2)

var SQRT_HALF = 7.07106781186547524400844362104849039284835937688474036588339868995366239231053519425193767163820786367506923115e-01;

// EXPORTS //

var lib = SQRT_HALF;

var square = (function (number) {
  return number * number;
});

var SQR_SQRT_HALF = square(lib);
var SQR_SQRT2 = square(SQRT2);

export { SQR_SQRT_HALF, SQR_SQRT2 };
"
`;

exports[`modules snapshot (B) built umd 1`] = `
"/** @preserve
  * package: modules-fixture v0.0.0
  * file: dist/modules-fixture.umd.js
  * homepage: HOMEPAGE
  * license: LICENSE
  **/

(function (global, factory) {
	typeof exports === 'object' && typeof module !== 'undefined' ? factory(exports, require('const-sqrt-two')) :
	typeof define === 'function' && define.amd ? define(['exports', 'const-sqrt-two'], factory) :
	(factory((global.modulesFixture = {}),global.constSqrtTwo));
}(this, (function (exports,SQRT2) { 'use strict';

	SQRT2 = SQRT2 && SQRT2.hasOwnProperty('default') ? SQRT2['default'] : SQRT2;

	// sqrt(1/2)

	var SQRT_HALF = 7.07106781186547524400844362104849039284835937688474036588339868995366239231053519425193767163820786367506923115e-01;

	// EXPORTS //

	var lib = SQRT_HALF;

	var square = (function (number) {
	  return number * number;
	});

	var SQR_SQRT_HALF = square(lib);
	var SQR_SQRT2 = square(SQRT2);

	exports.SQR_SQRT_HALF = SQR_SQRT_HALF;
	exports.SQR_SQRT2 = SQR_SQRT2;

	Object.defineProperty(exports, '__esModule', { value: true });

})));
"
`;
